加入課程的 tips 清單

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <h1>Web Fundamentals</h1>
+  <ol>
+    <li>右下腳的漢堡選單可以開啟</li>
+    <li>可以觀看每個步驟的原始碼，來了解每一個步驟</li>
+    <li>然後快去 hack, hack, hack 吧</li>
+  </ol>
   <script src="js/tutorial.js"></script>
 </body>
 </html>
