--- a/src/step7.html
+++ b/src/step7.html
@@ -12,7 +12,7 @@
   <header class="pageHeader">
     <nav class="pageHeader-navbar">
       <div class="logo">
-        <h1><a href="/" title="達暉資訊官方網站">達暉資訊</a></h1>
+        <h1><a href="#" title="達暉資訊官方網站">達暉資訊</a></h1>
       </div>
       <ul class="menu">
         <li><a href="#">服務</a></li>
