--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Web Fundamentals</title>
   <link rel="stylesheet" href="css/tutorial.css">
+  <style>
+    * {
+      line-height: 2em;
+    }
+  </style>
 </head>
 <body>
   <h1>Web Fundamentals</h1>
@@ -11,6 +16,7 @@
     <li>右下腳的漢堡選單可以開啟</li>
     <li>可以觀看每個步驟的原始碼，來了解每一個步驟</li>
     <li>然後快去 hack, hack, hack 吧</li>
+    <li><a href="https://hackpad.com/Web-Fundamentals-Forum-NGeJRjJSgHP" target="_blank">線上討論區</a></li>
   </ol>
   <script src="js/tutorial.js"></script>
 </body>
