--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,10 @@
   <meta charset="UTF-8">
   <title>Web Fundamentals</title>
   <link rel="stylesheet" href="css/tutorial.css">
-  <style>
-    * {
-      line-height: 2em;
-    }
-  </style>
 </head>
 <body>
   <h1>Web Fundamentals</h1>
-  <ol>
+  <ol style="line-height: 2em;">
     <li>右下腳的漢堡選單可以開啟</li>
     <li>可以觀看每個步驟的原始碼，來了解每一個步驟</li>
     <li>然後快去 hack, hack, hack 吧</li>
